[package]
name = "skelopy"
version = "0.1.0"
edition = "2021"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/giripriyadarshan/skelopy"
license = "MIT"
homepage = "https://github.com/giripriyadarshan/skelopy"
description = "Copy skeleton of a directory to a new location"
keywords = ["skeleton", "copy", "directory", "new", "location"]
categories = ["command-line-utilities"]
exclude = ["target/**", ".gitignore",".github/**","LICENSE",".idea/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

[[bin]]
name = "skelopy"
path = "src/main.rs"

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true